change script and style source

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
         <meta name="description" content="index page fore retire_early app">
 
         <!-- external source file: own js file must be at bottom -->
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/index.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
         <!-- firebase set up script -->
         <script src="https://www.gstatic.com/firebasejs/3.7.5/firebase.js"></script>
@@ -25,7 +25,7 @@
             firebase.initializeApp(config);
         </script>
         <!-- my own script -->
-        <script type="text/javascript" src="script.js"></script>
+        <script type="text/javascript" src="js/index.js"></script>
     </head>
     <body>
         <h1>This is my test page</h1>
