authentification completed, need to implement sign out

--- a/public/main.html
+++ b/public/main.html
@@ -12,22 +12,6 @@
         <!-- above is CDN for twitter bootstrap 3.37 -->
         <link rel="stylesheet" href="css/main.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-        <!-- firebase set up script -->
-        <script src="https://www.gstatic.com/firebasejs/3.7.5/firebase.js"></script>
-        <script>
-            // Initialize Firebase
-            var config = {
-                apiKey: "AIzaSyCdMHNw3Bfat-ZU4STKRqi2M90WBwC6k1w",
-                authDomain: "retire-early.firebaseapp.com",
-                databaseURL: "https://retire-early.firebaseio.com",
-                projectId: "retire-early",
-                storageBucket: "retire-early.appspot.com",
-                messagingSenderId: "691990546510"
-            };
-            firebase.initializeApp(config);
-        </script>
-        <!-- my own script -->
-        <script type="text/javascript" src="js/main.js"></script>
     </head>
     <body>
         <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -58,9 +42,9 @@
             </footer>
         </div> 
 
-        <!-- Bootstrap core JavaScript
-        ================================================== -->
-        <!-- Placed at the end of the document so the pages load faster -->
+        <!-- script session: boostrap, firebase, own script -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-      </body>
+        <script src="https://www.gstatic.com/firebasejs/3.7.5/firebase.js"></script>
+        <script type="text/javascript" src="js/index.js"></script>
+    </body>
 </html>
