--- a/public/index.html
+++ b/public/index.html
@@ -13,22 +13,6 @@
         <!-- above is CDN for twitter bootstrap 3.37 -->
         <link rel="stylesheet" href="css/index.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-        <!-- firebase set up script -->
-        <script src="https://www.gstatic.com/firebasejs/3.7.5/firebase.js"></script>
-        <script>
-            // Initialize Firebase
-            var config = {
-                apiKey: "AIzaSyCdMHNw3Bfat-ZU4STKRqi2M90WBwC6k1w",
-                authDomain: "retire-early.firebaseapp.com",
-                databaseURL: "https://retire-early.firebaseio.com",
-                projectId: "retire-early",
-                storageBucket: "retire-early.appspot.com",
-                messagingSenderId: "691990546510"
-            };
-            firebase.initializeApp(config);
-        </script>
-        <!-- my own script -->
-        <script type="text/javascript" src="js/index.js"></script>
     </head>
     <body>
         <nav class="navbar navbar-inverse navbar-fixed-top">
@@ -68,17 +52,21 @@
             <div class="modal-dialog modal-sm" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <form class="form-signin">
-                            <h2 class="form-signin-heading"><p class="text-center">Log in</p><hr></h2>
+                        <form class="form-login">
+                            <h2 class="form-signin-heading"><p class="text-center">Log in</p></h2>
+                            <div class="alert alert-danger alert-dismissible err-box" role="alert">
+                                <p class="err-msg">error message</p>
+                            </div>
+                            <hr>
                             <label for="inputEmail" class="sr-only">Email address</label>
-                            <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+                            <input type="email" id="login_email" class="form-control hide-alert" placeholder="Email address" required autofocus>
                             <br>
                             <label for="inputPassword" class="sr-only">Password</label>
-                            <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+                            <input type="password" id="login_password" class="form-control hide-alert" placeholder="Password" required>
                             <div class="checkbox">
-                            <label>
-                            <input type="checkbox" value="remember-me"> Remember me
-                            </label>
+                                <label>
+                                    <input type="checkbox" value="remember-me"> Remember me
+                                </label>
                             </div>
                             <button class="btn btn-lg btn-primary btn-block" type="submit">Log in</button>
                         </form>
@@ -91,13 +79,17 @@
             <div class="modal-dialog modal-sm" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <form class="form-signin">
-                            <h2 class="form-signin-heading"><p class="text-center">Sign up</p><hr></h2>
+                        <form class="form-signup">
+                            <h2 class="form-signin-heading"><p class="text-center">Sign up</p></h2>
+                            <div class="alert alert-danger alert-dismissible err-box" role="alert">
+                                <p class="err-msg">error message</p>
+                            </div>
+                            <hr>
                             <label for="inputEmail" class="sr-only">Email address</label>
-                            <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+                            <input type="email" id="signup_email" class="form-control hide-alert" placeholder="Email address" required autofocus>
                             <br>
                             <label for="inputPassword" class="sr-only">Password</label>
-                            <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+                            <input type="password" id="signup_password" class="form-control hide-alert" placeholder="Password" required>
                             <br>
                             <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
                         </form>
@@ -106,9 +98,9 @@
             </div>
         </div>
 
-        <!-- Bootstrap core JavaScript
-        ================================================== -->
-        <!-- Placed at the end of the document so the pages load faster -->
+        <!-- script session: boostrap, firebase, own script -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-      </body>
+        <script src="https://www.gstatic.com/firebasejs/3.7.5/firebase.js"></script>
+        <script type="text/javascript" src="js/index.js"></script>
+    </body>
 </html>
