authentification by email/pw completed

--- a/public/main.html
+++ b/public/main.html
@@ -26,7 +26,20 @@
                     <a class="navbar-brand" href="#">Retire Early</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
-                    <!-- add drop down menu here -->
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="user"><span class="caret"></span></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">Action</a></li>
+                                <li><a href="#">Another action</a></li>
+                                <li><a href="#">Something else here</a></li>
+                                <li role="separator" class="divider"></li>
+                                <li class="dropdown-header">Nav header</li>
+                                <li><a href="#">Separated link</a></li>
+                                <li><a href="" id="sign_out">Sign out</a></li>
+                            </ul>
+                        </li>
+                    </ul>
                 </div><!--/.navbar-collapse -->
             </div>
         </nav>
@@ -45,6 +58,6 @@
         <!-- script session: boostrap, firebase, own script -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
         <script src="https://www.gstatic.com/firebasejs/3.7.5/firebase.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
+        <script type="text/javascript" src="js/main.js"></script>
     </body>
 </html>
