--- a/public/main.html
+++ b/public/main.html
@@ -30,12 +30,10 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" id="user"><span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="#">Action</a></li>
-                                <li><a href="#">Another action</a></li>
-                                <li><a href="#">Something else here</a></li>
+                                <li class="dropdown-header">Sign in as username</li>
                                 <li role="separator" class="divider"></li>
-                                <li class="dropdown-header">Nav header</li>
-                                <li><a href="#">Separated link</a></li>
+                                <li><a href="#">Profile</a></li>
+                                <li><a href="#">Setting</a></li>
                                 <li><a href="" id="sign_out">Sign out</a></li>
                             </ul>
                         </li>
